netmap: pkt-gen: fix offset hex formatting

PR:		252594
Reported by:	brpoole@vt.edu
MFC after:	3 days